--- a/jobplus/templates/macros.html
+++ b/jobplus/templates/macros.html
@@ -32,3 +32,66 @@
     {% endfor %}
 </form>
 {% endmacro %}
+
+{% macro render_pagination(pagination, endpoint) %}
+    <nav aria-label="Page navigation">
+      <ul class="pagination">
+        <li {% if not pagination.has_prev %} class="disabled"{% endif %}>
+          <a href="{{ url_for(endpoint, page=pagination.prev_num) if pagination.has_prev }}" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+
+      {% for page in pagination.iter_pages() %}
+          {% if page %}
+              {% if page != pagination.page %}
+                  <li><a href="{{ url_for(endpoint, page=page) }}">{{ page }}</a></li>
+              {% else %}
+                  <li class="active"><a href="#">{{ page }}<span class="sr-only">(current)</span></a></li>
+
+              {% endif %}
+          {% else %}
+              <span class="ellipsis"></span>
+          {% endif %}
+
+      {% endfor %}
+
+        <li {% if not pagination.has_next %} class="disabled"{% endif %}>
+          <a href="{{ url_for(endpoint, page=pagination.next_num) if pagination.has_next }}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+{% endmacro %}
+
+{% macro render_job(job) %}
+    <div class="col-sm-6 col-md-4 ">
+      <div class="job-box">
+      <div class="caption">
+        <a href="#">
+        <b>{{ job.name }}</b> <span class="timesince">[1天前]</span>
+        <p>经验要求 学历要求</p>
+        <span class="label label-default">标签</span>
+        <span class="label label-default">标签</span>
+        <span class="label label-default">标签</span>
+        </a>
+      </div>
+      <hr>
+      <div class="media">
+        <div class="media-left">
+          <a href="#">
+          <img class="media-object" src="one logo is in here" width="40" height="40" alt="...">
+          </a>
+          </div>
+          <div class="media-body">
+          <a href="#">
+          <h4 class="media-heading">企业名字</h4>
+          </a>
+          <span class="company-meta">企业信息</span>
+          </div>
+      </div>
+      </div>
+    </div>
+{% endmacro %}
+
