--- a/jobplus/templates/macros.html
+++ b/jobplus/templates/macros.html
@@ -32,3 +32,64 @@
     {% endfor %}
 </form>
 {% endmacro %}
+
+{% macro render_pagination(pagination, endpoint) %}
+    <nav class="nav-pagination" aria-label="Page navigation">
+        <ul class="pagination">
+            <li{% if not pagination.has_prev %} class="disabled"{% endif %}>
+                <a href="{{ url_for(endpoint, page=pagination.prev_num) }}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+
+            {% for page in pagination.iter_pages() %}
+                {% if page %}
+                    {% if page != pagination.page %}
+                        <li><a href="{{ url_for(endpoint, page=page) }}">{{ page }}</a></li>
+                    {% else %}
+                        <li class="active"><a href="#">{{ page }}<span class="sr-only">(current)</span></a></li>
+                    {% endif %}
+                {% else %}
+                    <span class="ellipsis">?</span>
+                {% endif %}
+            {% endfor %}
+
+            <li{% if not pagination.has_next %} class="disabled"{% endif %}>
+                <a href="{{ url_for(endpoint, page=pagination.next_num) }}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+{% endmacro %}
+
+{% macro render_job(job) %}
+    <div class="col-sm-6 col-md-3">
+        <div class="job-box">
+            <div class="caption">
+                <a href="#">
+                    <b>{{ job.name }}</b> <span class="timesince">[1天前]</span>
+                    <p>经验1 年 学历专科</p>
+                    <span class="label label-default">jdk</span>
+                    <span class="label label-default">des</span>
+                    <span class="label label-default">dfe</span>
+                </a>
+            </div>
+            <hr>
+            <div class="media">
+                <div class="media-left">
+                    <a href="#">
+                        <img width="40" height="40" class="media-object" alt="..." src="one logo is in here">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <a href="#">
+                        <h4 class="media-heading">{{ job.company.name }}</h4>
+                    </a>
+                    <span class="company-meta">None/None/地址地址地址</span>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endmacro %}
+
