--- a/jobplus/templates/job/index.html
+++ b/jobplus/templates/job/index.html
@@ -15,7 +15,7 @@
             {{ render_job(job) }}
         {% endfor %}
     </div>
-    {{ render_pagination(pagination, 'job.index') }}
+    {{ render_pagination(pagination, 'jobs.index') }}
 {% endblock %}
 
 
