--- a/jobplus/static/main.css
+++ b/jobplus/static/main.css
@@ -17,3 +17,14 @@
     background-color: #fff;
 }
 
+.job-box {
+    padding: 13px;
+    border: solid 1px #ddd;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
+.nav-pagination {
+    text-align: center;
+    clear: both;
+}
