完成了职位列表的设计功能 职位列表1.1.1

--- a/jobplus/templates/index.html
+++ b/jobplus/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% from "macros.html" import render_job,render_pagination %}
 
 
 {% block title %}Home{% endblock %}
@@ -17,63 +18,12 @@
         <li role="presentation" class="active"><a href="#">最新职位</a></li>
       </ul>
 
-     <div class="new-job-list">
-          <div class="col-sm-6 col-md-4 ">
-              <div class="job-box">
-              <div class="caption">
-                <a href="#">
-                <b>这里是职位名称</b> <span class="timesince">[1天前]</span>
-                <p>经验要求 学历要求</p>
-                <span class="label label-default">标签</span>
-                <span class="label label-default">标签</span>
-                <span class="label label-default">标签</span>
-                </a>
-              </div>
-              <hr>
-              <div class="media">
-                <div class="media-left">
-                  <a href="#">
-                  <img class="media-object" src="one logo is in here" width="40" height="40" alt="...">
-                  </a>
-                  </div>
-                  <div class="media-body">
-                  <a href="#">
-                  <h4 class="media-heading">企业名字</h4>
-                  </a>
-                  <span class="company-meta">企业信息</span>
-                  </div>
-              </div>
-              </div>
-          </div>
-        <div class="col-sm-6 col-md-4">
-              <div class="job-box">
-              <div class="caption">
-                <a href="#">
-                <b>这里是职位名称</b> <span class="timesince">[1天前]</span>
-                <p>经验要求 学历要求</p>
-                <span class="label label-default">标签</span>
-                <span class="label label-default">标签</span>
-                <span class="label label-default">标签</span>
-                </a>
-              </div>
-              <hr>
-              <div class="media">
-                <div class="media-left">
-                  <a href="#">
-                  <img class="media-object" src="one logo is in here" width="40" height="40" alt="...">
-                  </a>
-                  </div>
-                  <div class="media-body">
-                  <a href="#">
-                  <h4 class="media-heading">企业名字</h4>
-                  </a>
-                  <span class="company-meta">企业信息</span>
-                  </div>
-              </div>
-              </div>
-          </div>
+    <div class="job-list">
+        {% for job in pagination.items %}
+            {{ render_job(job) }}
+        {% endfor %}
+    </div>
 
-     </div>
     <p class="list-more">
     <a href="/" class="btn btn-success btn-lg list-more-btn">查看更多</a>
     </p>
