--- a/jobplus/static/main.css
+++ b/jobplus/static/main.css
@@ -28,3 +28,23 @@
     text-align: center;
     clear: both;
 }
+
+.list-more {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.footer {
+    text-align: center;
+    clear: both;
+    border-top: 1px solid #eee;
+    padding: 16px 0 24px;
+    margin-top: 15px;
+    color: #999;
+    font-size: 14px;
+}
+
+.timesince {
+    font-size: 12px;
+    color: #999;
+}
