--- a/jobplus/templates/index.html
+++ b/jobplus/templates/index.html
@@ -6,9 +6,11 @@
 
 {% block head %}
     <div class="jumbotron">
-        <h1>Hello, Welcome to Jobplus!</h1>
-        <p>领先的互联网求职平台</p>
-{#        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>#}
+        <div class="container">
+            <h1>Hello, Welcome to Jobplus!</h1>
+            <p>领先的互联网求职平台</p>
+            {#        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>#}
+        </div>
     </div>
 {% endblock %}
 
